Made custom toasts have its height adapt to its contents